--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+* {
+  padding: 0;
+  margin: 0;
+  font-size: 18px;
+  background-color: rgb(131, 129, 129);
+}
+
 .App {
   text-align: center;
 }
