--- a/src/CompanyCard.css
+++ b/src/CompanyCard.css
@@ -5,7 +5,8 @@
   width: 70%;
   margin: 2em auto;
   padding: 1em;
-  border: 2px solid black;
+  border: 1px solid black;
+  border-radius: 5px;
   color: black;
   background-color: white;
   text-decoration: none;
