--- a/src/JobCard.css
+++ b/src/JobCard.css
@@ -5,6 +5,7 @@
   width: 60%;
   padding: 1em;
   margin: .5em;
-  border: 2px solid black;
+  border: 1px solid black;
+  border-radius: 5px;
   background-color: white;
 }
