--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 * {
   padding: 0;
   margin: 0;
-  font-size: 18px;
+  font-family: Arial, Helvetica, sans-serif;
+  /* font-size: 18px; */
 }
 
 body {
