--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,12 @@
   padding: 0;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  /* font-size: 18px; */
 }
 
 body {
-  background: url(background.png);
+  background: url(background3.webp);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
