--- a/src/LoginForm.css
+++ b/src/LoginForm.css
@@ -1,35 +1,38 @@
-.LoginForm {
-  display: flex;
-  flex-direction: column;
-  width: 50%;
-  margin: 3em auto;
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  z-index: 1;
 }
 
-.LoginForm-login {
-  font-size: 32px;
-  color: rgba(255, 255, 255, 0.903);
-  text-shadow: 5px 5px 5px black;
-  margin-bottom: .4em;
+.LoginForm-card {
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  z-index: 2;
+  margin-top: 15em;
 }
 
-.LoginForm-form {
-  background-color: white;
-  color: black;
-  display: flex;
-  flex-direction: column;
-  padding: .5em 5em;
-  border-radius: 5px;
+.btn-primary {
+  width: 60%;
 }
 
-.LoginForm input {
-  padding: .3em;
+.btn-primary:hover {
+  background-color: #0056b3;
+  transition: background-color 0.3s ease;
+  cursor: pointer;
 }
 
-.LoginForm button {
-  background-color: rgb(34, 82, 239);
-  color: white;
-  border-radius: 5px;
-  border: 0;
-  margin: .7em;
-  padding: .5em;
+.LoginForm-h4 {
+  font-weight: bold;
+}
+
+.LoginForm-close {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  border: none;
+  background: none;
 }
