--- a/src/JobCard.css
+++ b/src/JobCard.css
@@ -3,9 +3,13 @@
   align-items: start;
   flex-direction: column;
   width: 60%;
-  padding: 1em;
-  margin: .5em;
+  padding: 1em 0 0 1em;
+  margin: .2em;
   border: 1px solid black;
   border-radius: 5px;
   background-color: white;
+}
+
+.JobCard-title {
+  font-weight: bold;
 }
